# lambert

./: .env.example  CMakeLists.txt  Dockerfile  battin1984.cpp  battin1984.h  docker-compose.yml  main.cpp  package-lock.json  package.json  readme.md  test.html
.github/workflows/: build.yml
public/: 404.html  auth.js  error_message.js  horizon.js  index.html  login.html  register.html  register.js  styles.css
public/admin/: admin.js  dashboard.html  dashboard.js  header.html  header.js  sidebar.html  sidebar.js  statistics.html  statistics.js  users.html
public/porkchop/: celestialData.json  celestialDataParser.js  plot_calc.css  porkchop_main.js  visualize_porkchop.js
src/backend/: index.js
src/backend/middlewares/: auth.js  logVisitorCall.js
src/backend/models/: callRecord.js  dailyVisitorStat.js  user.js  visitorLog.js
src/backend/routes/: admin.js  adminStats.js  auth.js  horizonRoutes.js  visitorTracker.js
src/backend/utils/: anonymizeIP.js  parseYearMonth.js
src/cpp/: battin1984.cpp  battin1984.h  main.cpp  test.html
